--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div id='root'></div>
+    <!-- 웹팩에서 생성된 번들js파일을 불러온다. (같은폴더안에 번들js를 만들었때문에 바로 불러올수있다.) -->
     <script src="bundle.js"></script>
 </body>
 </html>
